remove duplicate class ConfigAddress and use IPAddress instead